--- a/biography.html
+++ b/biography.html
@@ -31,7 +31,7 @@
             Люблю слухати музику та грати комп'ютерні ігри. До того часу поки не виявилося, що мені не можна займатися важким видом спорту
             грав за шкільну волейбольну команду на чемпіонатах та ходив в тренажерний зал.
         </p>
-        <a href="#content">Назад</a>
+        <a href="#content" title="Назад">Назад</a>
     </article>
 
     <article id="childhood">
@@ -41,7 +41,7 @@
             швидко, а саме тоді коли прийшло пізнання того,що потрібно працювати щоб досягти мети.
 
         </p>
-        <a href="#content">Назад</a>
+        <a href="#content" title="Назад">Назад</a>
      </article>
         
     <article id="School">
@@ -51,7 +51,7 @@
             Брав участі в конкурсах(кенгуру,колосок,бобер),олімпіадах(Англійська мова,Математика,Інформатика,фізика,Біологія,Українська мова), та ближче до 10 класу зрозумів, що в них немає ніякого сенсу окрім того,щоб почерпнути чогось для себе.
             Починаючи з 10 класу готувався до ЗНО. Й цього року я здав НМТ на досить непоганий бал. 
         </p>
-        <a href="#content">Назад</a>
+        <a href="#content" title="Назад">Назад</a>
  </article>
  
  <article id="Free_time">
@@ -60,7 +60,7 @@
         Часто відвідував тренувальний зал, грали в волейбол. Любили зібратися в компанії друзів поговорити на різні теми вечором. 
         В літку часто подорожував з сім'єю, були в Хорватії, Угорщині,Польщі,Німеччині та об'їздили всі області України. 
     </p>
-    <a href="#content">Назад</a>
+    <a href="#content" title="Назад">Назад</a>
 </article>
 
 <article id="University">
@@ -69,10 +69,10 @@
     та й сам навчальний заклад мені досить сподобався. Бували й труднощі з навчальним процесом, мені важко адаптуватися до повітряних тривог та 
     навчання в період війни в цілому. Але чесно кажучи поки що навчання тут мені сподобалося більше ніж в школі.
 </p>
-<a href="#content">Назад</a>
+<a href="#content" title="Назад">Назад</a>
 </article>
     <div><hr></div>
-<a href="#top">Уверх</a>
+<a href="#top" title="Повернутися на початок">Уверх</a>
 
 </body>
     </html>
