--- a/novadays.html
+++ b/novadays.html
@@ -5,7 +5,7 @@
     <title>Nowadays</title>
 </head>
 <body>
-    <h1>Сьогодення Сенич Дмитро</h1>
+    <h1>Сьогодення Сенича Дмитра</h1>
     <A href = "index.html" title="Назад на персональну сторінку">
         <div>Назад на головну</div>
     </A>
