--- a/lab1/gallery.html
+++ b/lab1/gallery.html
@@ -5,7 +5,7 @@
     <title>Gallery</title>
 </head>
 <body>
-    <h1>Сьогодення Сенич Дмитро</h1>
+    <h1>Галерея Сенич Дмитро</h1>
     <A href = "index.html" title="Назад на персональну сторінку">
         <div>Назад на головну</div>
         </A>
