--- a/lab2/biography.html
+++ b/lab2/biography.html
@@ -4,6 +4,71 @@
 <head>
     <meta charset="utf-8">
     <title>Biography</title>
+    <style>
+        h1{
+            text-align: center;
+            font-size: 22px;
+        }
+
+        a > div{
+            font-style: italic;
+        }
+
+        #content{   
+            text-align: center;
+        }
+
+        div li{
+            list-style: none;
+        }
+        li> a:link {
+            text-decoration: none;
+            color:black;
+           background-color: blue;
+           display:block;
+           width: 150px;
+           border:1px solid green;
+           margin-bottom: 1px;
+        }
+        li > a:hover{
+            background-color: magenta;
+        }
+       
+        li >a:active{
+            background-color: yellow;
+        }
+        /*Перевірити чи точно 140 і 120%*/
+        article p {
+            font-size: 120%;
+            
+        }
+        article > h2{
+            font-size: 140%;
+        }
+        /**/
+        #default_info p{
+            background-color: brown;
+        }
+        #childhood p{
+            background-color: salmon; 
+        }
+        #School p{
+            background-color: blueviolet;
+        }
+        #Free_time p{
+            background-color: bisque;
+        }
+        #University p{
+            background-color: chartreuse;
+        }
+        article a{
+            font-weight: bold;
+        }
+        body>a{
+            text-transform: uppercase;
+        }
+
+        </style>
 </head>
 <body>
     <h1 id="top">Автобіографія Сенича Дмитра</h1>
