--- a/lab2/friends.html
+++ b/lab2/friends.html
@@ -3,6 +3,36 @@
 <head>
     <meta charset="utf-8">
     <title>friends</title>
+    <style>
+      h1{
+        text-align: center;
+        font-size: 22px;
+      }
+      a>div{
+        font-style: italic;
+      }
+      h2{
+        text-align: center;
+      }
+      tr>th{
+        text-align: center;
+        background-color: green;
+        font-weight: bold;
+      }
+
+      tr>td:nth-child(odd){
+        background-color: grey;
+      }
+      tr>td:nth-child(even){
+        background-color: white;
+      }
+      tr>td:nth-child(5){
+        text-align: end;
+      }
+      table, th, td {
+         border: 1px solid;
+        }
+    </style>
 </head>
 <body>
     <h1>Друзі Сенича Дмитра Миколайовича</h1>
