--- a/lab2/novadays.html
+++ b/lab2/novadays.html
@@ -3,13 +3,44 @@
 <head>
     <meta charset="utf-8">
     <title>Nowadays</title>
+    <style>
+        h1{
+            text-align: center;
+            font-size: 22px;
+        }
+        a>div{
+            font-style: italic;
+        }
+        #ss{
+            text-align: center;
+        }
+        ul> li>ul>li:nth-child(odd){
+            background-color: grey;
+        }
+        ul > li>ul>li:nth-child(even){
+            background-color: white;
+        }
+        #sss {
+            text-align: center;
+        }
+        ol>li>ol>li:nth-child(3):hover{
+            cursor: pointer;
+        }
+        ol>li>ol>li:nth-child(5):hover{
+            cursor: pointer;
+        }
+        #element4{
+            background-color: aqua;
+        }
+        
+    </style>
 </head>
 <body>
     <h1>Сьогодення Сенича Дмитра</h1>
     <A href = "index.html" title="Назад на персональну сторінку">
         <div>Назад на головну</div>
     </A>
-    <h2>Мій типовий список покупок</h2>
+    <h2 id="ss">Мій типовий список покупок</h2>
     
     <ul>
         <li>Молочні продукти:
@@ -41,14 +72,14 @@
             </ul>
         </li>
     </ul>
-    <h2>Мій улюблений десерт:</h2>
+    <h2 id="sss">Мій улюблений десерт:</h2>
     <ol>
         <li>Приготування маси для оладок:
-            <ol>
+            <ol >
                 <li>Просіяти борошно і какао в миску.</li>
                 <li>Зробити невелике заглиблення в центрі.</li>
                 <li>Влити яйця і ретельно збити.</li>
-                <li>Шоколад і молоко змішати в каструлі до повного розчинення шоколаду.</li>
+                <li id="element4">Шоколад і молоко змішати в каструлі до повного розчинення шоколаду.</li>
                 <li>Влити в тісто і збити до однорідного стану.</li>
                 <li>Додати цедру і сік апельсина, добре перемішати.</li>
             </ol>
