--- a/lab2/gallery.html
+++ b/lab2/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Gallery</title>
     <style>
-        h1{
+       h1{
             text-align: center;
             font-size: 20px;
         }
@@ -13,25 +13,27 @@
         }
         h2{
             text-align: center;
+            font-size: 24px;
+            
         }
         /*70% від h2 потрібно відкорегувати*/
         #class1{
             text-align: center;
-            font-size: 70% ;
+            font-size: 16.8px;
         }
         /*130% від h2 потрібно відкорегувати*/
         #class2{
             text-align: center;
-            font-size: 130%;
+            font-size:31.2px;
         }
         /*130% від class2 потрібно відкорегувати*/
         #class3{
             text-align: center;
-            font-size: 130%;
+            font-size: 40.56px;
         }
        /* Потрібно помістити зображення в центр*/
-        img{
-            
+        p{
+            text-align: center;
         }
 
 
