--- a/lab2/gallery.html
+++ b/lab2/gallery.html
@@ -32,9 +32,12 @@
             font-size: 40.56px;
         }
        /* Потрібно помістити зображення в центр*/
-       p{
-            text-align: center;
-        }
+      img {
+        display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+      }
 
 
     </style>
