--- a/Домашня контрольна робота/index.html
+++ b/Домашня контрольна робота/index.html
@@ -19,8 +19,8 @@
 <div class="row">
     <section class="b1 col-md-5 col-lg-3 col-xxl-6">
         <h3>Текст</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur assumenda distinctio alias iure, expedita doloribus, ea quod labore mollitia a 
-         exercitationem atque molestias deleniti reiciendis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia libero illum iusto. Reprehenderit 
+         omnis, voluptatibus necessitatibus sit odio aliquid culpa ducimus impedit ullam blanditiis accusamus eius, in adipisci quas mollitia.</p>
     </section>
 
     <section class="b2 col-md-5 col-lg-3 col-xxl-6">
